--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div>Hola</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Blog de Poesía</title>
+  </head>
+  <body>
+    <header>
+      <h1>🌿 Blog de Poesia 🌿</h1>
+    </header>
+
+    <main>
+      <div>
+        <h2>Poema 20 (Fragmento)</h2>
+        <p>
+          Puedo escribir los versos más tristes esta noche. <br />
+          Escribir, por ejemplo: "La noche está estrellada, <br />
+          y tiritan, azules, los astros, a lo lejos."
+        </p>
+        <div>- Pablo Neruda</div>
+      </div>
+
+      <div>
+        <h2>Amanecer</h2>
+        <p>
+          La brisa susurra secretos al alba, <br />
+          las hojas despiertan con un dulce temblor. <br />
+          El sol besa el horizonte dorado, <br />
+          un nuevo día nace en su fulgor.
+        </p>
+        <div>- Autor Anónimo</div>
+      </div>
+
+      <div class="poem">
+      <h2>Cordura</h2>
+      <p>
+        Algunas personas <br>
+        nunca se vuelven locas. <br>
+        Qué vidas tan <br>
+        horribles deben llevar.  
+      </p>
+      <div class="author">— Charles Bukowski</div>
+    </div>
+
+    </main>
+
+    <footer>
+        <p>📖 Disfruta la poesía, deja volar tu imaginación. © 2025</p>
+    </footer>
+  </body>
 </html>
